@@ -26,6 +26,10 @@
   - stevesk@cvs.openbsd.org 2002/11/24 21:46:24
      [ssh-keysign.8]
      typo: "the the"
+   - wcobb@cvs.openbsd.org 2002/11/26 00:45:03
+     [scp.c ssh-keygen.c]
+     Remove unnecessary fflush(stderr) calls, stderr is unbuffered by default.
+     ok markus@
 
 20021205
  - (djm) PERL-free fixpaths from stuge-openssh-unix-dev@cdy.org
